fixed overflow page issue

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,3 @@
-html {
-  overflow-x: hidden;
-}
 
 img {
   max-width: 100%;
